# convo-ai

./: .gitattributes  .gitignore  Makefile  QUESTIONS.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  backfill_flags.py  backfill_rollups.py  make_dashboard_pdf.py  make_ga4_pdf.py  pyproject.toml  verify_rollup_aggregation.py  verify_sql_aggregation.py
backend/alembic/: env.py
backend/alembic/versions/: 5568bf8ad483_initial_migration.py
backend/app/: auth.py  config.py  database.py  main.py  scheduler.py  store.py
backend/app/models/: __init__.py  admin_user.py  ai_integration.py  chat.py  client.py  dashboard.py  ga4.py  sync_log.py
backend/app/routers/: admin_ai.py  admin_clients.py  admin_dashboards.py  admin_ga4.py  admin_system.py  admin_users.py  public.py
backend/app/schemas/: admin_user.py  ai_integration.py  client.py  dashboard.py  ga4.py  public.py  system.py
backend/app/services/: aggregations.py  ai.py  assistant.py  audit.py  auth_jwt.py  default_dashboard.json  encryption.py  escalation.py  ga4.py  language.py  phone_country.py  precompute.py  seed.py  session_flags.py  sheets.py  (+3 more)
backend/convo_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: 0001_initial.sql  0004_bulk_mark_chat_rows_processed_rpc.sql  0006_dashboard_branding.sql  0007_chat_rows_ai_error_columns.sql  0008_ai_integrations.sql  0009_client_branding.sql  0010_admin_users.sql  0011_dashboard_layout_config.sql  0012_convo_sql_aggregation.sql
backend/scripts/: backfill_recent.py
backend/tests/: conftest.py  test_smoke.py
(+52 files in other folders)
