[project]
name = "convo-ai-backend"
version = "0.1.0"
description = "Convo AI backend — FastAPI service. DB layer deferred per the 2026-05-18 build note."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "supabase>=2.5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "anthropic>=0.25",
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
    "openai>=1.30",
    "google-analytics-data>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
